# Generated by Django 4.2.7 on 2025-11-23 13:28

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('hunters', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Ammunition',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ammo_type', models.CharField(choices=[('308', '.308 Winchester'), ('12g', '12 Gauge'), ('9mm', '9mm Parabellum'), ('22lr', '.22 LR'), ('223', '.223 Remington'), ('30-06', '.30-06 Springfield'), ('45acp', '.45 ACP'), ('270', '.270 Winchester')], max_length=10)),
                ('quantity', models.PositiveIntegerField()),
                ('location', models.CharField(default='Main Storage', max_length=100)),
                ('purchase_date', models.DateTimeField(auto_now_add=True)),
                ('cost_per_unit', models.DecimalField(blank=True, decimal_places=2, max_digits=8, null=True)),
                ('supplier', models.CharField(blank=True, max_length=100)),
                ('minimum_stock', models.PositiveIntegerField(default=100)),
                ('expiry_date', models.DateField(blank=True, null=True)),
            ],
            options={
                'ordering': ['ammo_type', '-purchase_date'],
            },
        ),
        migrations.CreateModel(
            name='AmmunitionTransaction',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('transaction_type', models.CharField(choices=[('purchase', 'Purchase'), ('usage', 'Usage'), ('transfer', 'Transfer'), ('loss', 'Loss/Damage')], max_length=20)),
                ('quantity', models.IntegerField(help_text='Positive for additions, negative for subtractions')),
                ('timestamp', models.DateTimeField(auto_now_add=True)),
                ('notes', models.TextField(blank=True)),
                ('reference_number', models.CharField(blank=True, max_length=50)),
                ('ammunition', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='transactions', to='ammunition.ammunition')),
                ('hunter', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='hunters.hunter')),
            ],
            options={
                'ordering': ['-timestamp'],
            },
        ),
    ]
